--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,118 @@
+<a id="Marion2"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Combe à Marion</h3>
+  </li>
+  <li class="date">
+    December 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/marion2/IMG_1132.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1132.jpg" alt="IMG_1132.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/marion2/IMG_1136.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1136.jpg" alt="IMG_1136.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/marion2/IMG_1144.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1144.jpg" alt="IMG_1144.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/marion2/IMG_1150.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1150.jpg" alt="IMG_1150.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/marion2/IMG_1159.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1159.jpg" alt="IMG_1159.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/marion2/IMG_1164.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/marion2/IMG_1164.jpg" alt="IMG_1164.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/marion2/IMG_1166.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1166.jpg" alt="IMG_1166.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/marion2/IMG_1169.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1169.jpg" alt="IMG_1169.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/marion2/IMG_1170.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_1170.jpg" alt="IMG_1170.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/marion2/IMG_9999.jpg"
+      title=""
+      onclick="return hs.expand(this, config_marion2)">
+      <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Sierra"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -433,121 +548,6 @@
       <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Fairview"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Fairview</h3>
-  </li>
-  <li class="date">
-    June 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/fairview/DSCN0638.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0638.jpg" alt="DSCN0638.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/fairview/DSCN0638.jpg" alt="DSCN0638.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/fairview/DSCN0644.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0644.jpg" alt="DSCN0644.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0644.jpg" alt="DSCN0644.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/fairview/DSCN0650.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0650.jpg" alt="DSCN0650.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0650.jpg" alt="DSCN0650.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/fairview/DSCN0651.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0651.jpg" alt="DSCN0651.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0651.jpg" alt="DSCN0651.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/fairview/DSCN0660.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0660.jpg" alt="DSCN0660.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0660.jpg" alt="DSCN0660.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/fairview/DSCN0679.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0679.jpg" alt="DSCN0679.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/fairview/DSCN0679.jpg" alt="DSCN0679.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/fairview/DSCN0692.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0692.jpg" alt="DSCN0692.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/fairview/DSCN0692.jpg" alt="DSCN0692.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/fairview/DSCN0693_crescent_panorama2.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="589" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0693_crescent_panorama2.jpg" alt="DSCN0693_crescent_panorama2.jpg" />
-      <noscript>
-        <img width="589" height="120" src="thumbs/fairview/DSCN0693_crescent_panorama2.jpg" alt="DSCN0693_crescent_panorama2.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/fairview/DSCN0704.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0704.jpg" alt="DSCN0704.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0704.jpg" alt="DSCN0704.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/fairview/DSCN0706.jpg"
-      title=""
-      onclick="return hs.expand(this, config_fairview)">
-      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0706.jpg" alt="DSCN0706.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/fairview/DSCN0706.jpg" alt="DSCN0706.jpg" />
       </noscript>
     </a>
   </div>
