--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,118 @@
+<a id="Fairview"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Fairview</h3>
+  </li>
+  <li class="date">
+    June 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/fairview/DSCN0638.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0638.jpg" alt="DSCN0638.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/fairview/DSCN0638.jpg" alt="DSCN0638.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/fairview/DSCN0644.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0644.jpg" alt="DSCN0644.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0644.jpg" alt="DSCN0644.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/fairview/DSCN0650.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0650.jpg" alt="DSCN0650.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0650.jpg" alt="DSCN0650.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/fairview/DSCN0651.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0651.jpg" alt="DSCN0651.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0651.jpg" alt="DSCN0651.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/fairview/DSCN0660.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0660.jpg" alt="DSCN0660.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0660.jpg" alt="DSCN0660.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/fairview/DSCN0679.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0679.jpg" alt="DSCN0679.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/fairview/DSCN0679.jpg" alt="DSCN0679.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/fairview/DSCN0692.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0692.jpg" alt="DSCN0692.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/fairview/DSCN0692.jpg" alt="DSCN0692.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/fairview/DSCN0693_crescent_panorama2.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="589" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0693_crescent_panorama2.jpg" alt="DSCN0693_crescent_panorama2.jpg" />
+      <noscript>
+        <img width="589" height="120" src="thumbs/fairview/DSCN0693_crescent_panorama2.jpg" alt="DSCN0693_crescent_panorama2.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/fairview/DSCN0704.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0704.jpg" alt="DSCN0704.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0704.jpg" alt="DSCN0704.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/fairview/DSCN0706.jpg"
+      title=""
+      onclick="return hs.expand(this, config_fairview)">
+      <img class="lazy galleries/fairview" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/fairview/DSCN0706.jpg" alt="DSCN0706.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/fairview/DSCN0706.jpg" alt="DSCN0706.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Tahoe"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -524,161 +639,6 @@
       <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Yosemite"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Yosemite</h3>
-  </li>
-  <li class="date">
-    March 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/01.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/01.jpg" alt="01.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/01.jpg" alt="01.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/03.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/03.jpg" alt="03.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/03.jpg" alt="03.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yosemite/04.panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
-      <noscript>
-        <img width="382" height="120" src="thumbs/yosemite/04.panorama.jpg" alt="04.panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yosemite/05.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yosemite/06.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/06.jpg" alt="06.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/06.jpg" alt="06.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yosemite/07.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/07.jpg" alt="07.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/07.jpg" alt="07.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/08.5.panorama.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="382" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
-      <noscript>
-        <img width="382" height="120" src="thumbs/yosemite/08.5.panorama.jpg" alt="08.5.panorama.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/09.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/09.jpg" alt="09.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/09.jpg" alt="09.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/yosemite/10.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/yosemite/11.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/11.jpg" alt="11.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/yosemite/11.jpg" alt="11.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/yosemite/13.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/13.jpg" alt="13.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/13.jpg" alt="13.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/yosemite/14.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/14.jpg" alt="14.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/14.jpg" alt="14.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/yosemite/15.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/15.jpg" alt="15.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/15.jpg" alt="15.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/yosemite/16.jpg"
-      title=""
-      onclick="return hs.expand(this, config_yosemite)">
-      <img class="lazy galleries/yosemite" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/yosemite/16.jpg" alt="16.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/yosemite/16.jpg" alt="16.jpg" />
       </noscript>
     </a>
   </div>
