--- a/content5.html
+++ b/content5.html
@@ -1,3 +1,118 @@
+<a id="Pinnacles"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Pinnacles</h3>
+  </li>
+  <li class="date">
+    October &amp; December 2012
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles/IMG_0010.jpg"
+      title="The reservoir. The right pinnacle has a route going up it that I want to check out. "
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/pinnacles/IMG_0012.jpg"
+      title="The south (and east) side of the monolith."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/pinnacles/IMG_0019.jpg"
+      title="Anders climbing Post Orgasmic Depression."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/pinnacles/IMG_0020.jpg"
+      title="Hiking the High Peaks trail in October with Shaon & co."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/pinnacles/IMG_0021.jpg"
+      title="We did an eight miles loop passing by Hawkins Peak."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/pinnacles/IMG_0024.jpg"
+      title="The Balconies, on the west side, viewed from the second pitch of Machete Direct."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles/IMG_0030.jpg"
+      title="Machete Ridge, viewed from the Balconies. Pitch 3 and up of Machete Direct are visible."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/pinnacles/IMG_0039.jpg"
+      title="Kai leading Lava Fall, a west side classic. Great easy overhaning climb."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/pinnacles/IMG_0051.jpg"
+      title="Dusk on Machete Ridge."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/pinnacles/IMG_0056.jpg"
+      title="Sunset from the parking lot."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="CathedralPeak"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -528,238 +643,3 @@
   </div>
   <div style="clear:both"></div>
 </div>
-<a id="Whitney"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Whitney</h3>
-  </li>
-  <li class="date">
-    May 2012
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/whitney/HPIM1624.jpg"
-      title="Looking up from Whitney Portal"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1624.jpg" alt="HPIM1624.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1624.jpg" alt="HPIM1624.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/whitney/HPIM1634.jpg"
-      title="The Lower Boy Scout Lake. Whitney is visible in the background."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1634.jpg" alt="HPIM1634.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1634.jpg" alt="HPIM1634.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/whitney/HPIM1640.jpg"
-      title="The Lower Boy Scout Lake viewed from the slabs leading the Upper Boy Scout Lake."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1640.jpg" alt="HPIM1640.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1640.jpg" alt="HPIM1640.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/whitney/HPIM1649.jpg"
-      title="Approaching Iceberg Lake, Whitney is the rightmost peak."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1649.jpg" alt="HPIM1649.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1649.jpg" alt="HPIM1649.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/whitney/HPIM1651.jpg"
-      title="Sunset on Keeler's Needle"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1651.jpg" alt="HPIM1651.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1651.jpg" alt="HPIM1651.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/whitney/HPIM1659.jpg"
-      title="The camp at Iceberg Lake. In total, the approach took 5 and half hours."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1659.jpg" alt="HPIM1659.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1659.jpg" alt="HPIM1659.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/whitney/HPIM1660.jpg"
-      title="Whitney's East face. 2000 feet of rock to climb tomorrow."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1660.jpg" alt="HPIM1660.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1660.jpg" alt="HPIM1660.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/whitney/HPIM1664.jpg"
-      title="The ascent route follows the right snow gully. We came down from the left one."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1664.jpg" alt="HPIM1664.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1664.jpg" alt="HPIM1664.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/whitney/HPIM1671.jpg"
-      title="Sunrise on the White Mountains. Lone Pine is down in the valley."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1671.jpg" alt="HPIM1671.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1671.jpg" alt="HPIM1671.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/whitney/HPIM1674.jpg"
-      title="Same shot five minutes later"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1674.jpg" alt="HPIM1674.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1674.jpg" alt="HPIM1674.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/whitney/HPIM1677.jpg"
-      title="The start of the route: The tower traverse. Not difficult, but the exposure is dramatic."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1677.jpg" alt="HPIM1677.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1677.jpg" alt="HPIM1677.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/whitney/HPIM1678.jpg"
-      title="Sunrise on Keeler's Needle"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1678.jpg" alt="HPIM1678.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1678.jpg" alt="HPIM1678.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/whitney/HPIM1680.jpg"
-      title="Looking down half way up Whitney from the top of the fresh air traverse."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1680.jpg" alt="HPIM1680.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1680.jpg" alt="HPIM1680.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/whitney/HPIM1682.jpg"
-      title="The fresh air traverse"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1682.jpg" alt="HPIM1682.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1682.jpg" alt="HPIM1682.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/whitney/HPIM1683.jpg"
-      title="Getting high enough to see surrounding valleys"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1683.jpg" alt="HPIM1683.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1683.jpg" alt="HPIM1683.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/whitney/HPIM1686.jpg"
-      title="Looking down all the way to Whitney Portal"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1686.jpg" alt="HPIM1686.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1686.jpg" alt="HPIM1686.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/whitney/HPIM1687.jpg"
-      title="Not quite on the summit, but getting close"
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1687.jpg" alt="HPIM1687.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1687.jpg" alt="HPIM1687.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/whitney/HPIM1690.jpg"
-      title="Whitney'summit: flat with an abandoned hut. We needed about 6 hours of climbing to get up here."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1690.jpg" alt="HPIM1690.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1690.jpg" alt="HPIM1690.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/whitney/HPIM1693.jpg"
-      title="Gotta get back all the way down there... It took us about 5 and half hours, including packing camp, but it felt like 10 hours."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1693.jpg" alt="HPIM1693.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/whitney/HPIM1693.jpg" alt="HPIM1693.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/whitney/HPIM1697.jpg"
-      title="The Mountaineer's route, our descent."
-      onclick="return hs.expand(this, config_whitney)">
-      <img class="lazy galleries/whitney" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/whitney/HPIM1697.jpg" alt="HPIM1697.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/whitney/HPIM1697.jpg" alt="HPIM1697.jpg" />
-      </noscript>
-    </a>
-  </div>
-    <div class="photo">
-    <a class="vid_cursor" href="videos/whitney.mp4" onclick="return hs.htmlExpand(this, { contentId: 'whitney-video', preserveContent: false} )">
-      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_whitney.jpg" alt="" />
-      <noscript>
-        <img width="160" height="120" src="videos/thumb_whitney.jpg" alt="" />
-      </noscript>
-    </a>
-    </div>
-  <div style="clear:both"></div>
-</div>
-
-<div class="highslide-html-content" id="whitney-video"
-    style="width: 641px">
-    <div class="highslide-body">
-      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/whitney.jpg">
-        <source src="videos/whitney.mp4" type="video/mp4" />
-        <source src="videos/whitney.webm" type="video/webm" />
-        Your browser does not support the video tag.
-      </video> 
-    </div>
-</div>
-
